crates/ic-diagnostic/tests/snapshots/tab_test__mixed_spaces_and_tabs.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
error: test error
   ┌ test.rs:1:9
   │
 1 │     int x = 42;
   ·         ^ here
   └──
