crates/ic-diagnostic/tests/snapshots/tab_test__multiple_errors_with_tabs.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
error: multiple tabs
   ┌ test.rs:1:5
   │
 1 │     int x   =   42;
   ·     ^^^ ^       ^^ value
   ·     │   └─ variable
   ·     └─ type
   └──
