crates/ic-diagnostic/tests/snapshots/tab_test__multiple_tabs.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
⨯: test error
  @ test.rs:1:13

 1 │ int x = 42;
   │     ˆ here
