crates/ic-diagnostic/tests/snapshots/tab_test__tab_at_end_of_line.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
error: trailing tab
   ┌ test.rs:1:12
   │
 1 │ int x = 42;
   ·  tab here
   └──
