crates/ic-diagnostic/tests/snapshots/tab_test__tab_in_multiline_error.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
⨯: struct fields
  @ test.rs:2:1

 1 │ struct Foo {
 2 │     int x;
   │ ˆˆˆˆˆˆˆˆˆ first field
 3 │     float y;
   │ ˆˆˆˆˆˆˆˆˆˆˆ second field
 4 │ }
