crates/ic-diagnostic/tests/snapshots/tab_test__tabs_between_tokens.snap
---
source: crates/ic-diagnostic/tests/tab_test.rs
expression: buf
---
⨯: test error
  @ test.rs:1:9

 1 │ int x = 42;
   │     ˆ variable
